@@ -5,6 +5,7 @@ v4.1.11 (2017-03-xx)
 * fixed exception handling in Connection (issue #110)
 * added connection pooling (issue #103)
 * extracted VelocyPack implementation to https://github.com/arangodb/java-velocypack
+* added extension point for VelocyPack serialization (ArangoDBAsync.registerModule())
 * added dependency java-velocypack-module-jdk8
 * added support for replacing build-in VelocyPack serializer/deserializer
 * added ArangoDatabaseAsync.getVersion(), ArangoDatabaseAsync.getAccessibleDatabases()
